add assets and default styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,16 @@
-<h1>Hello</h1>
+<h1>
+  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis
+  perferendis voluptatem vero asperiores aperiam tempora.
+</h1>
+<h2>
+  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis
+  perferendis voluptatem vero asperiores aperiam tempora.
+</h2>
+<h3>
+  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis
+  perferendis voluptatem vero asperiores aperiam tempora.
+</h3>
+<h4>
+  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis
+  perferendis voluptatem vero asperiores aperiam tempora.
+</h4>
