--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@use './styles/reset.scss';
+@use './styles/typography.scss';
+
+body {
+  background-color: #070724;
+  columns: white;
+}
