feat: add header component and planets service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,2 @@
-<h1>
-  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis
-  perferendis voluptatem vero asperiores aperiam tempora.
-</h1>
-<h2>
-  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis
-  perferendis voluptatem vero asperiores aperiam tempora.
-</h2>
-<h3>
-  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis
-  perferendis voluptatem vero asperiores aperiam tempora.
-</h3>
-<h4>
-  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis
-  perferendis voluptatem vero asperiores aperiam tempora.
-</h4>
+<app-header></app-header>
+<router-outlet></router-outlet>
