--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,8 @@
 
 body {
   background-color: #070724;
-  columns: white;
+  color: white;
+  font-family: 'League Spartan', sans-serif;
+  background-image: url('./assets/background-stars.svg');
+  background-position: bottom;
 }
