--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,8 @@
-<h2>THE PLANETS</h2>
+<h2 routerLink="/">THE PLANETS</h2>
 <nav>
   <ul>
-    <li
-      [routerLink]="link.name.toLowerCase()"
-      *ngFor="let link of links$ | async"
-    >
-      {{ link.name | uppercase }}
+    <li [routerLink]="link.toLowerCase()" *ngFor="let link of links">
+      {{ link | uppercase }}
     </li>
   </ul>
 </nav>
