--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,14 @@
-<h2 routerLink="/">THE PLANETS</h2>
-<nav>
-  <ul>
-    <li [routerLink]="link.toLowerCase()" *ngFor="let link of links">
-      {{ link | uppercase }}
-    </li>
-  </ul>
-</nav>
+<header>
+  <h2 routerLink="/">THE PLANETS</h2>
+  <nav>
+    <ul>
+      <li
+        routerLinkActive="active"
+        [routerLink]="link.toLowerCase()"
+        *ngFor="let link of links"
+      >
+        {{ link | uppercase }}
+      </li>
+    </ul>
+  </nav>
+</header>
