feat: add planet stats component

--- a/src/app/planet-container/planet-stats/planet-stats.component.html
+++ b/src/app/planet-container/planet-stats/planet-stats.component.html
@@ -1,1 +1,18 @@
-<p>planet-stats works!</p>
+<div class="stat">
+  <h4 class="title">ROTATION TIME</h4>
+  <h2>{{ planet.rotation }}</h2>
+</div>
+<div class="stat">
+  <h4 class="title">REVOLUTION TIME</h4>
+  <h2>{{ planet.revolution }}</h2>
+</div>
+<div class="stat">
+  <h4 class="title">RADIUS</h4>
+  <h2>{{ planet.radius }}</h2>
+</div>
+<div class="stat">
+  <h4 class="title">AVERAGE TEMP.</h4>
+  <h2>
+    {{ planet.temperature }}
+  </h2>
+</div>
