feat: add different images for planet layers

--- a/src/app/planet-container/planet-container.component.html
+++ b/src/app/planet-container/planet-container.component.html
@@ -1,5 +1,16 @@
 <ng-container *ngIf="planet$ | async as planet">
-  <img [src]="planet.images.planet" alt="" />
-  <app-planet-info [info]="planet"></app-planet-info>
+  <div class="planet-image">
+    <img [src]="currentImage || planet.images.planet" alt="Planet Image" />
+    <img
+      class="geology-image"
+      *ngIf="geologyImage"
+      [src]="geologyImage"
+      alt="Geology Image"
+    />
+  </div>
+  <app-planet-info
+    (changeImage)="handleImageChange($event)"
+    [info]="planet"
+  ></app-planet-info>
   <app-planet-stats [stats]="planet"></app-planet-stats>
 </ng-container>
