--- a/src/app/planet-container/planet-info/planet-info.component.scss
+++ b/src/app/planet-container/planet-info/planet-info.component.scss
@@ -22,6 +22,7 @@
 .btns {
   display: flex;
   flex-direction: column;
+  margin-top: 39px;
   gap: 16px;
 }
 
@@ -36,6 +37,11 @@ button {
   text-transform: uppercase;
   font-family: 'league spartan';
   font-weight: 700;
+  transition: background-color .2s;
+
+  &:hover {
+    background-color: rgb(216, 216, 216, 0.2);
+  }
 
   span {
     opacity: .5;
